<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/profile_pic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="desc"
        android:src="@drawable/launcher"
        app:placeholderImage="@drawable/launcher"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/namePeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/profile_pic"
        android:paddingBottom="10dp"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:text="@string/name_people"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado_text"
        android:textSize="16sp"
        android:layout_below="@+id/namePeople"
        android:layout_toRightOf="@+id/profile_pic"
        android:layout_toEndOf="@+id/profile_pic" />

    <TextView
        android:id="@+id/contact_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_message"
        android:textColor="@color/has_message"
        android:background="@drawable/badge_circle"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/status"
        android:layout_alignBottom="@+id/status"
        android:layout_alignParentRight="true"
        android:paddingRight="5dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/member_name"
        android:layout_alignBottom="@+id/member_name"
        android:layout_alignParentRight="true"
        android:text="@string/houra_message"
        android:textSize="16sp" />

</RelativeLayout>
