<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.andro1id.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        fresco:actualImageScaleType="focusCrop"
        fresco:placeholderImage="@drawable/picture"
        fresco:placeholderImageScaleType="focusCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="231dp"
                android:layout_height="wrap_content"
                android:text="@string/name_people"
                android:textColor="@color/has_message"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:text="@string/houra_message"
                android:textColor="@color/has_message" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtCheck"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/has_message" />

        </LinearLayout>

    </LinearLayout>


</FrameLayout>